@startuml

title __SESSION's Class Diagram__\n

    namespace com.bluevortexflare.securevoip {
      namespace session {
        class com.bluevortexflare.securevoip.session.BasicUserSessionService {
            - sessions : List<VoIPSession>
            - users : List<VoIPUser>
            + addUserToSession()
            + createNewSession()
            + getOppositeAddressFromSession()
            + killSession()
        }
      }
    }

  

    namespace com.bluevortexflare.securevoip {
      namespace session {
        class com.bluevortexflare.securevoip.session.SessionController {
            + acceptConnection()
            + disconnect()
            + refuseConnection()
            + tryConnect()
            ~ SessionController()
        }
      }
    }

  

    namespace com.bluevortexflare.securevoip {
      namespace session {
        interface com.bluevortexflare.securevoip.session.UserSessionService {
            {abstract} + addUserToSession()
            {abstract} + createNewSession()
            {abstract} + getOppositeAddressFromSession()
            {abstract} + killSession()
        }
      }
    }


    namespace com.bluevortexflare.securevoip {
      namespace session {
        class com.bluevortexflare.securevoip.session.VoIPSession {
            - sessionId : String
            + getInitiator()
            + getResponder()
            + getSessionId()
            + setInitiator()
            + setResponder()
            + setSessionId()
        }
      }
    }

  

  com.bluevortexflare.securevoip.session.BasicUserSessionService .up.|> com.bluevortexflare.securevoip.session.UserSessionService
  com.bluevortexflare.securevoip.session.SessionController o-- com.bluevortexflare.securevoip.users.connection.UserConnectionService : connectionService
  com.bluevortexflare.securevoip.session.VoIPSession o-- com.bluevortexflare.securevoip.users.register.VoIPUser : initiator
  com.bluevortexflare.securevoip.session.VoIPSession o-- com.bluevortexflare.securevoip.users.register.VoIPUser : responder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
